--- a/EmailApplication/EmailApplication.csproj
+++ b/EmailApplication/EmailApplication.csproj
@@ -46,12 +46,14 @@
   <ItemGroup>
     <Compile Include="BusinessLayer.cs" />
     <Compile Include="DataLayer.cs" />
+    <Compile Include="DBConnection.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessContClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignUp.cs">
